--- a/snack4/index.html
+++ b/snack4/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="shortcut icon" href="https://boolean.careers/favicon/favicon-16x16.png" type="image/x-icon"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>snack1</title>
+    <title>snack4</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
     
 
-    <script src="js/script3.js"></script>
+    <script src="script4.js"></script>
 </body>
 
 </html>
